# tradingview-mcp

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  LAUNCH_STRATEGY.md  README.md  docker-compose.github.yml  docker-compose.image.yml  docker-compose.local.yml  docker-compose.yml  package.json  pyproject.toml  test_api.py
.github/workflows/: docker.yml
src/tradingview_mcp/: server.py
src/tradingview_mcp/core/utils/: validators.py
